--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -66,16 +66,16 @@ include::_includes:page$tags-rights.adoc[]
 
 include::_includes:page$tags-creation.adoc[]
 
+[TIP]
+.Create tags for the availability *Message (billable)*
+====
+If you want to create messages that should be <<#bill-message, billed>> via the Messenger, you have to create tags for the availability *Message (billable)* in the same way. You have to add these tags to the <<#create-message, message>>.
+====
+
 [#search-tag]
 ==== Searching for tags
 
 include::_includes:page$tags-search.adoc[]
-
-[TIP]
-.Create tags for the availability *Message (billable)*
-====
-If you want to create messages that should be <<#bill-message, billed>> via the Messenger, you have to create tags for the availability _Message (billable)_ in the same way. You have to add these tags to the <<#create-message, message>>.
-====
 
 [#complete-assistant]
 === Completing the assistant
@@ -89,7 +89,9 @@ You can assign tags to each inbox to be able to <<#search-conversation, filter>>
 [#service-activation]
 ==== Service activation
 
-In this step, activate the Messenger service. If the button is blue (icon:toggle_on[set=material, role=skyBlue]), the service is activated. If the button is grey (icon:toggle_off[set=material, role=darkGrey]), the service has _not_ been activated yet.
+In this step, activate the Messenger service for this inbox. If the button is blue (icon:toggle_on[set=material, role=skyBlue]), the service is activated. If the button is grey (icon:toggle_off[set=material, role=darkGrey]), the service has _not_ been activated yet.
+
+If you later activate multiple inboxes, which means that you completed the assistant multiple times for the individual inboxes, you can deactivate the corresponding inbox again in this step.
 
 [#email-forwarding]
 ==== Email forwarding
@@ -106,9 +108,9 @@ In this step, you can see the progress of the verification process. plentymarket
 [#settings-email-despatch]
 ==== Settings for sending emails
 
-In this step, save the login details of the email inbox from which you want to send emails so that your plentymarkets system can send emails such as order or shipping confirmations from this email address. 
+In this step, save the login details of the email inbox that you want to use to send emails from. This is necessary to make sure that your plentymarkets system is able to send and receive emails via the messenger. 
 
-After having entered the login details (host name, user name, port, password), select the encryption method and enter the sender email address and the sender name. This email address and this name will be shown to the recipients of your emails from this inbox.
+After having entered the login details, select the encryption method and enter the sender email address and the sender name. This email address and this name will be shown to the recipients of your emails from this inbox.
 
 *_Note for mailbox.org mailboxes:_* Enter the port *465* and select *SSL* as encryption method.
 
@@ -129,29 +131,31 @@ The following Messenger-related variables are available in the EmailBuilder:
 ====
 In the *CRM » EmailBuilder (Test phase)* menu, you can find a default template for the messenger. You can, of course, adjust this template according to your needs. The template contains the following variables:
 
+* Subject of the message in the subject line, shown as `{{ messenger.title }}`
+** So called _twig expressions_ in double curly brackets need to be inserted in the template’s subject because it is not possible to use “normal” variables in the subject line. For further information, refer to the xref:crm:emailbuilder.adoc#variables-emailbuilder[Available variables and twig expressions] chapter on the xref:crm:emailbuilder.adoc#[EmailBuilder] page.
 * Full name
 * Message content
 * Signature in HTML format
-* Message conversation ID
-** The variable *Message conversation ID* serves as unique identifier to make sure that the message is always correctly assigned. This is why this variable should _not_ be removed from the template.
+* Conversation ID
+** The variable *Conversation ID* serves as unique identifier to make sure that the message is always correctly assigned. This is why this variable should _not_ be removed from the template.
 ====
 
 [#settings-email-receipt]
 ==== Settings for receiving emails
 
-In this step, you select one or multiple tags that should be assigned to the messages when these messages are received from and sent to the forwarded addresses.
+In this step, select one or multiple tags that should be assigned to the messages when these messages are received from and sent to the forwarded addresses.
 
 In the last section, select the subscribers who should be informed in case of new messages. Either select individual users from the drop-down list or select roles in order that all users that are assigned to this role will subscribe for new messages in this inbox.
 
 [#test-mode-inactive]
 ==== Setting test mode to inactive
 
-To be able to send messages with the messenger, you need to set the test mode in the *Setup » Client » [Select client] » Email » Login details* to *inactive*.
+To be able to send messages with the messenger, the test mode in the *Setup » Client » [Select client] » Email » Login details* menu has to be set to *inactive*.
 
-You can set the test mode to *inactive* in this step without having to leave the assistant. To do so, select (icon:check_box[set=material, role=skyBlue]) the option *Activate live mode*.
+Setting the test mode to *inactive* can be done in this step without having to leave the assistant. To do so, select (icon:check_box[set=material, role=skyBlue]) the option *Activate live mode*.
 
 [#create-message]
-== Creating a message
+== Creating a new message
 
 Proceed as described below to create a new message in the Messenger.
 
@@ -163,6 +167,7 @@ Creating a message:
 . Enter a value in the *Add receiver...* field and select the appropriate value from the suggestion list. +
 *_Example:_* If you enter a number, possible receivers with this order ID or contact ID will be suggested (see <<#image-messenger-new-message-suggestion-list>>).
 . Enter the subject of the message in the *Subject* field.
+. Select the inbox from the drop-down list.
 . Enter the message in the text field.
 . Click on *Add attachments* (icon:attach_file[set=material, role=darkGrey]) to add attachments to the message.
 . Click on *Assign tags to message* (icon:local_offer[set=material, role=darkGrey]) to assign tags for the message.
@@ -184,6 +189,9 @@ image::crm:messenger-new-message-suggestion-list.png[width=640, height=360]
 
 |[#intable-subject]*Subject*
 |Enter a subject for the message.
+
+|[#intable-inbox]*Inbox*
+|Select an inbox from the drop-down list. The list shows the names of the inboxes that you set up by <<#complete-assistant, completing the assistant>>.
 
 |[#intable-text-field]*Text field*
 |Enter the content of the message here.
@@ -211,11 +219,8 @@ In the overview, whispered messages are shown in _italics_. +
 |You can start a timer for every message. Click on icon:more_vert[set=material, role=darkGrey] first. If you activate the *Timer* button (icon:toggle_on[set=material, role=skyBlue]), the timer next to the icon:forward_to_inbox[set=material, role=skyBlue] *SEND* button will start running automatically. +
 Click on icon:pause_circle[set=material, role=darkGrey] to stop the timer and on icon:play_circle[set=material, role=darkGrey] to start the timer again.
 
-|[#intable-manage-inboxes]*Manage inboxes*
-|Click on icon:edit[set=material, role=darkGrey] *Manage inboxes* to be redirected to the *Setup » Assistants » Basic settings* menu. Here, you can edit the inboxes by using the *Messenger configuration* <<#complete-assistant, assistant>>.
-
-|[#intable-name-inbox]_Name of the currently selected inbox_
-| Click on icon:arrow_drop_down[set=material, role=darkGrey] to select another inbox from the drop-down list. The list shows the names of the inboxes that you set up by <<#complete-assistant, completing the assistant>>.
+|[#intable-manage-inboxes]*Manage inboxes* (icon:more_vert[set=material, role=darkGrey])
+|Click on icon:more_vert[set=material, role=darkGrey] first and afterwards on icon:edit[set=material, role=darkGrey] *Manage inboxes*. You will be redirected to the *Setup » Assistants » Basic setup* menu. Here, you can edit the inboxes via the available *Messenger configuration* <<#complete-assistant, assistants>>.
 
 |[#intable-send]*SEND*
 |By clicking on icon:forward_to_inbox[set=material, role=skyBlue] *SEND*, the message will be sent. +
@@ -256,7 +261,7 @@ Searching for a conversation in the Messenger:
 
 |[#intable-filter-referrer]*Referrer*
 a|Select a referrer to only search for conversations with this referrer. +
-Possible values: 
+Possible values:
 
 * *Back end*
 * *REST*
@@ -341,7 +346,7 @@ You can set the filter as default filter directly when creating it as described 
 In the line of the saved filter, click on icon:star[set=material, role=darkGrey] *Set as default*. If you want to set another filter as default filter, deactivate the currently selected default filter by clicking on icon:star_outline[set=material, role=darkGrey] *Do not use as default*.
 
 [#configure-columns]
-=== Configuring columns
+== Configuring columns
 
 By clicking on icon:settings[set=material, role=darkGrey] on the top right, you can have the following columns displayed in the overview of the Messenger:
 
@@ -358,14 +363,14 @@ By clicking on icon:settings[set=material, role=darkGrey] on the top right, you 
 |Shows the checkbox for the <<#group-function, group function>> (icon:check_box_outline_blank[set=material, role=darkGrey]) in the overview.
 
 |[#intable-overview-status]*Status*
-|Shows with the symbol icon:circle[set=material, role=skyBlue] that the message is still unread. Shows with the symbol icon:circle[set=material, role=green] that the message is closed.
+|Shows with the symbol icon:circle[set=material, role=skyBlue] (Message unread) that there are unread messages within the conversation. Shows with the symbol icon:circle[set=material, role=green] (Message completed) that the conversation is closed.
 
 |[#intable-overview-short-id]*Short ID*
 |Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the ID.
 
 |[#intable-overview-referrer]*Referrer*
-a|Shows with the symbol the referrer of the message. +
-Possible values: 
+a|Shows with a symbol the referrer of the conversation’s first message. +
+Possible values:
 
 * *Back end*
 * *REST*
@@ -384,7 +389,7 @@ a|The conversation relations are shown here, for example:
 
 In the line of the conversation, click on icon:chevron_right[set=material, role=darkGrey] to see all available relations at a glance. Click on icon:expand_more[set=material, role=darkGrey] to close the relation area again. +
 
-*_Note:_* +
+*_Notes:_* +
 The xref:crm:contacts.adoc#[contact] has a direct link to the corresponding data record in the *CRM » Contacts* menu. +
 The xref:orders:managing-orders.adoc#[order] has a direct link to the corresponding data record in the *Orders » Edit orders* menu. +
 The xref:orders:subscription.adoc#[subscription] has a direct link to the corresponding data record in the *Orders » Subscriptions (Test phase)* menu. +
@@ -395,10 +400,10 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 |Shows the subject of the first message within the conversation.
 
 |[#intable-overview-created-at]*Created at*
-|Shows the date and the time when the message was created. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
+|Shows the date and the time when the conversation was created. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
 
 |[#intable-overview-updated-at]*Updated at*
-|Shows the date and time when the message was updated. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
+|Shows the date and the time when the conversation was updated. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
 
 |[#intable-overview-tags]*Tags*
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
@@ -410,11 +415,10 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 |The symbol icon:credit_card[set=material, role=darkGrey] in the column *Billed messages* (icon:credit_card[set=material, role=darkGrey]) shows whether the conversation has billed messages. When you hover with your cursor over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed messages.
 
 |[#intable-overview-billed-minutes]*Billed minutes*
-|The symbol icon:av_timer[set=material, role=darkGrey] in the *Billed minutes* (icon:av_timer[set=material, role=darkGrey]) column shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed minutes.
+|The symbol icon:av_timer[set=material, role=darkGrey] in the column *Billed minutes* (icon:av_timer[set=material, role=darkGrey]) shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed minutes.
 
 |[#intable-overview-subscribed]*Subscribed*
 |The column icon:notifications[set=material, role=darkGrey] shows with the symbol icon:done[set=material, role=darkGrey] whether you have <<#subscribe-conversation, subscribed for>> the conversation.
-   
 
 |[#intable-overview-context-menu]*Context menu*
 |Allows to edit conversations in the overview using the <<#context-menu, context menu>>.
@@ -422,6 +426,19 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 |====
 
 Click on the button *Configure columns* (icon:settings[set=material, role=darkGrey]) on the top right to deactivate the columns that are already shown in the overview.
+
+[#reply-to-message]
+== Replying to a message
+
+Search the <<#search-conversation, conversation>> that contains the message you want to reply to. Click on the message to reply to it.
+
+The only difference to <<#create-message, creating a message>> is that you can show and hide the subject line when replying to an existing message by clicking on the symbol icon:more_vert[set=material, role=darkGrey] (see <<#image-messenger-reply-to-message>>). 
+
+[[image-messenger-reply-to-message]]
+.Replying to a message
+image::crm:messenger-reply-to-message.png[width=640, height=360]
+
+You can adjust the subject, when the option *Subject* is activated (icon:toggle_on[set=material, role=skyBlue]). If you have _not_ activated the option *Subject* (icon:toggle_off[set=material, role=darkGrey]), the *Subject* field is not visible when replying to the message.
 
 //// 
 TODO: wieder einfügen, wenn diese Funktion wieder eingebaut wurde.
@@ -441,7 +458,7 @@ The table view is selected by default.
 [#context-menu]
 == Editing conversations in the overview
 
-In the Messenger overview the following functions are available when clicking in the line of the conversation on icon:more_vert[set=material, role=darkGrey].
+The following functions are available in the Messenger overview when clicking in the line of the conversation on icon:more_vert[set=material, role=darkGrey].
 
 [[image-messenger-context-menu-overview]]
 .Editing a conversation via the context menu
@@ -543,7 +560,7 @@ Marking a conversation as done:
 . Go to *CRM » Messenger (Test phase)*.
 . In the line of the conversation that you want to mark as done, click on icon:more_vert[set=material, role=darkGrey].
 . Click on icon:circle[set=material, role=darkGrey] *Mark conversation as done*. +
-→ At the beginning of the conversation’s line, the symbol icon:task[set=material, role=skyBlue] is shown.
+→ At the beginning of the conversation’s line, the symbol icon:circle[set=material, role=green] is shown.
 
 [#context-menu-mark-as-not-done]
 ==== Marking a conversation as not done
@@ -556,7 +573,7 @@ Marking a conversation as not done:
 . Go to *CRM » Messenger (Test phase)*.
 . In the line of the conversation that you want to mark as not done, click on icon:more_vert[set=material, role=darkGrey].
 . Click on icon:radio_button_unchecked[set=material, role=darkGrey] *Mark conversation as not done*. +
-→ At the beginning of the conversation’s line, the symbol icon:task[set=material, role=skyBlue] is shown.
+→ At the beginning of the conversation’s line, the symbol icon:circle[set=material, role=green] is removed.
 
 [#context-menu-subscribe-unsubscribe-conversation]
 === Subscribing for / Unsubscribing from a conversation
@@ -618,7 +635,7 @@ Billing a message:
 *_Example:_* If you enter a number, possible receivers with this order ID or contact ID will be suggested (see <<#image-messenger-new-message-suggestion-list>>).
 . Enter the subject of the message in the *Subject* field.
 . Enter the message in the text field.
-. Click on icon:visibility_on[set=material, role=darkGrey] to whisper the message. +
+. Click on icon:visibility[set=material, role=darkGrey] to whisper the message. +
 *_Note:_* Only whispered messages can be billed. The symbol icon:visibility_off[set=material, role=skyBlue] shows you that a message is whispered.
 . Click on icon:local_offer[set=material, role=darkGrey] to assign tags for the message. +
 *_Important:_* To be able to bill messages, you have to create a tag of the type *Messages (billable)* in the *Setup » Settings » Tags* menu.
@@ -778,13 +795,13 @@ You can have the following columns displayed in the *New messages* folder of the
 |Shows the checkbox for the <<#group-function, group function>> (icon:check_box_outline_blank[set=material, role=darkGrey]) in the overview.
 
 |[#intable-new-messages-status]*Status*
-|Shows with the symbol icon:circle[set=material, role=skyBlue] that the message is still unread. Shows with the symbol icon:circle[set=material, role=green] that the message is closed.
+|Shows with the symbol icon:circle[set=material, role=skyBlue] (Message unread) that there are unread messages within the conversation. Shows with the symbol icon:circle[set=material, role=green] (Message completed) that the conversation is closed.
 
 |[#intable-new-messages-short-id]*Short ID*
 |Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the ID.
 
 |[#intable-new-messages-referrer]*Referrer*
-a|Shows with the symbol the referrer of the message. +
+a|Shows with a symbol the referrer of the conversation’s first message. +
 Possible values:
 
 * *Back end*
@@ -804,7 +821,7 @@ a|The conversation relations are shown here, for example:
 
 In the line of the conversation, click on icon:chevron_right[set=material, role=darkGrey] to see all available relations at a glance. Click on icon:expand_more[set=material, role=darkGrey] to close the relation area again.  +
 
-*_Note:_* +
+*_Notes:_* +
 The xref:crm:contacts.adoc#[contact] has a direct link to the corresponding data record in the *CRM » Contacts* menu. +
 The xref:orders:managing-orders.adoc#[order] has a direct link to the corresponding data record in the *Orders » Edit orders* menu. +
 The xref:orders:subscription.adoc#[subscription] has a direct link to the corresponding data record in the *Orders » Subscriptions (Test phase)* menu. +
@@ -815,19 +832,19 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 |Shows the subject of the first message within the conversation.
 
 |[#intable-new-messages-created-at]*Created at*
-|Shows the date and the time when the message was created. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
+|Shows the date and the time when the conversation was created. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
 
 |[#intable-new-messages-updated-at]*Updated at*
-|Shows the date and time when the message was updated. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
+|Shows the date and the time when the conversation was updated. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
 
 |[#intable-new-messages-tags]*Tags*
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
- 
+
 |[#intable-new-messages-attachments]*Attachments*
-|The symbol icon:attach_file[set=material, role=darkGrey] in the *Number of attachments* (icon:attach_file[set=material, role=darkGrey]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of attachments.
+|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material, role=darkGrey]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of attachments.
 
 |[#intable-new-messages-billed-messages]*Billed messages*
-|The symbol icon:credit_card[set=material, role=darkGrey] in the *Billed messages* (icon:credit_card[set=material, role=darkGrey]) column shows whether the conversation has billed messages. When you hover with your cursor over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed messages.
+|The symbol icon:credit_card[set=material, role=darkGrey] in the column *Billed messages* (icon:credit_card[set=material, role=darkGrey]) shows whether the conversation has billed messages. When you hover with your cursor over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed messages.
 
 |[#intable-new-messages-billed-minutes]*Billed minutes*
 |The symbol icon:av_timer[set=material, role=darkGrey] in the column *Billed minutes* (icon:av_timer[set=material, role=darkGrey]) shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed minutes.
@@ -872,13 +889,13 @@ You can have the following columns displayed in the *My messages* folder of the 
 |Shows the checkbox for the <<#group-function, group function>> (icon:check_box_outline_blank[set=material, role=darkGrey]) in the overview.
 
 |[#intable-my-messages-status]*Status*
-|Shows with the symbol icon:circle[set=material, role=skyBlue] that the message is still unread. Shows with the symbol icon:circle[set=material, role=green] that the message is closed.
+|Shows with the symbol icon:circle[set=material, role=skyBlue] (Message unread) that there are unread messages within the conversation. Shows with the symbol icon:circle[set=material, role=green] (Message completed) that the conversation is closed.
 
 |[#intable-my-messages-short-id]*Short ID*
 |Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the ID.
 
 |[#intable-my-messages-referrer]*Referrer*
-a|Shows with the symbol the referrer of the message. +
+a|Shows with a symbol the referrer of the conversation’s first message. +
 Possible values:
 
 * *Back end*
@@ -898,7 +915,7 @@ a|The conversation relations are shown here, for example:
 
 In the line of the conversation, click on icon:chevron_right[set=material, role=darkGrey] to see all available relations at a glance. Click on icon:expand_more[set=material, role=darkGrey] to close the relation area again.  +
 
-*_Note:_* +
+*_Notes:_* +
 The xref:crm:contacts.adoc#[contact] has a direct link to the corresponding data record in the *CRM » Contacts* menu. +
 The xref:orders:managing-orders.adoc#[order] has a direct link to the corresponding data record in the *Orders » Edit orders* menu. +
 The xref:orders:subscription.adoc#[subscription] has a direct link to the corresponding data record in the *Orders » Subscriptions (Test phase)* menu. +
@@ -909,16 +926,16 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 |Shows the subject of the first message within the conversation.
 
 |[#intable-my-messages-created-at]*Created at*
-|Shows the date and the time when the message was created. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
+|Shows the date and the time when the conversation was created. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
 
 |[#intable-my-messages-updated-at]*Updated at*
-|Shows the date and time when the message was updated. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
+|Shows the date and the time when the conversation was updated. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
 
 |[#intable-my-messages-tags]*Tags*
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
 
 |[#intable-my-messages-attachments]*Attachments*
-|The symbol icon:attach_file[set=material, role=darkGrey] in the *Number of attachments* (icon:attach_file[set=material, role=darkGrey]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of attachments.
+|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material, role=darkGrey]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of attachments.
 
 |[#intable-my-messages-billed-messages]*Billed messages*
 |The symbol icon:credit_card[set=material, role=darkGrey] in the column *Billed messages* (icon:credit_card[set=material, role=darkGrey]) shows whether the conversation has billed messages. When you hover with your cursor over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed messages.
@@ -966,13 +983,13 @@ You can have the following columns displayed in the trash folder of the Messenge
 |Shows the checkbox for the <<#group-function, group function>> (icon:check_box_outline_blank[set=material, role=darkGrey]) in the overview.
 
 |[#intable-trash-status]*Status*
-|Shows with the symbol icon:circle[set=material, role=skyBlue] that the message is still unread. Shows with the symbol icon:circle[set=material, role=green] that the message is closed.
+|Shows with the symbol icon:circle[set=material, role=skyBlue] (Message unread) that there are unread messages within the conversation. Shows with the symbol icon:circle[set=material, role=green] (Message completed) that the conversation is closed.
 
 |[#intable-trash-short-id]*Short ID*
 |Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the ID.
 
 |[#intable-trash-referrer]*Referrer*
-a|Shows with the symbol the referrer of the message. +
+a|Shows with a symbol the referrer of the conversation’s first message. +
 Possible values:
 
 * *Back end*
@@ -992,7 +1009,7 @@ a|The conversation relations are shown here, for example:
 
 In the line of the conversation, click on icon:chevron_right[set=material, role=darkGrey] to see all available relations at a glance. Click on icon:expand_more[set=material, role=darkGrey] to close the relation area again. +
 
-*_Note:_* +
+*_Notes:_* +
 The xref:crm:contacts.adoc#[contact] has a direct link to the corresponding data record in the *CRM » Contacts* menu. +
 The xref:orders:managing-orders.adoc#[order] has a direct link to the corresponding data record in the *Orders » Edit orders* menu. +
 The xref:orders:subscription.adoc#[subscription] has a direct link to the corresponding data record in the *Orders » Subscriptions (Test phase)* menu. +
@@ -1001,20 +1018,18 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 
 |[#intable-trash-subject]*Subject*
 |Shows the subject of the first message within the conversation.
- 
 
 |[#intable-trash-created-at]*Created at*
-|Shows the date and the time when the message was created. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
+|Shows the date and the time when the conversation was created. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
 
 |[#intable-trash-updated-at]*Updated at*
-|Shows the date and time when the message was updated. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
+|Shows the date and the time when the conversation was updated. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] or icon:arrow_downward[set=material, role=darkGrey] to sort the table in ascending or descending order by the date.
 
 |[#intable-trash-tags]*Tags*
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
- 
 
 |[#intable-trash-attachments]*Attachments*
-|The symbol icon:attach_file[set=material, role=darkGrey] in the *Number of attachments* (icon:attach_file[set=material, role=darkGrey]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of attachments.
+|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material, role=darkGrey]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of attachments.
 
 |[#intable-trash-billed-messages]*Billed messages*
 |The symbol icon:credit_card[set=material, role=darkGrey] in the column *Billed messages* (icon:credit_card[set=material, role=darkGrey]) shows whether the conversation has billed messages. When you hover with your cursor over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed messages.
