--- a/docs/en-gb/modules/markets/pages/preparing-variations.adoc
+++ b/docs/en-gb/modules/markets/pages/preparing-variations.adoc
@@ -188,7 +188,7 @@ Defining the RRP for country platforms:
 [#850]
 === Defining special offers
 
-In order to transfer special offers to Amazon, create an additional sales price with the price type *Special offer* and link it to the variation. In addition, create the properties *SaleStartDate* and *SaleEndDate* and link these properties to the variation. Proceed as described below to define special offers for Amazon items.
+In order to transfer special offers to Amazon, create an additional sales price with the price type *Special offer* and link it to the variation. In addition, create the properties *sale_from_date* and *sale_end_date* and link these properties to the variation. Proceed as described below to define special offers for Amazon items.
 
 [.instruction]
 Defining a special offer for Amazon platforms:
@@ -202,7 +202,7 @@ Defining a special offer for Amazon platforms:
 *_Note:_* If these fields are empty, the price will not be taken into consideration.
 . Save (icon:save[set=plenty]) the settings.
 
-Now create the properties *SaleStartDate* and *SaleEndDate* and map these properties to Amazon categories. Proceed as decribed below to create and map the property *SaleStartDate*. Create the property *SaleEndDate* in the same way but enter the name *SaleEndDate* and link the Amazon field *sale_end_date* instead.
+Now create the properties *sale_from_date* and *sale_end_date* and map these properties to Amazon categories. Proceed as decribed below to create and map the property *sale_from_date*. Create the property *sale_end_date* in the same way but enter the name *sale_end_date* and link the Amazon field *sale_end_date* instead.
 
 * Is this your first time working with properties? Then read up on the xref:item:properties.adoc#10[principles of properties first].
 
@@ -213,19 +213,19 @@ Creating and mapping a property for special offers:
 . Click on *icon:plus[role="darkGrey"] Create property*.
 . In the drop-down list *Section*, select the option *Items*.
 . From the drop-down list *Type*, select the option *Date*.
-. In the field *Name*, enter the name *SaleStartDate*. +
-*_Important:_* Only use this name *SaleStartDate* for the property. Otherwise, the special offer price will not be exported to Amazon.
+. In the field *Name*, enter the name *sale_from_date*. +
+*_Important:_* Only use this name *sale_from_date* for the property. Otherwise, the special offer price will not be exported to Amazon.
 . Enter a position number for the property.
-. *_Optional:_* If you sell internationally, save the name *SaleStartDate* for additional languages.
+. *_Optional:_* If you sell internationally, save the name *sale_from_date* for additional languages.
 . In the *Amazon* area, click on *icon:plus-square[role="green"] Add link*.
 . Select an *Amazon platform* from the drop-down list.
 . Select a *category* from the drop-down list.
 . In the drop-down list *Field*, select the field *sale_from_date*.
 . Save (icon:save[set=plenty]) the settings. +
 → The correlation is saved.
-. Now create the property *SaleEndDate* in the same way. In the drop-down list *Field*, select *sales_end_date*.
+. Now create the property *sale_end_date* in the same way. In the drop-down list *Field*, select *sale_end_date*.
 
-You have already created a special offer price and the properties *SalesStartDate* and *SalesEndDate*. Now specify the period in which the offer price is valid. You also save a price.
+You have already created a special offer price and the properties *sale_from_date* and *sale_end_date*. Now specify the period in which the offer price is valid. You also save a price.
 
 [.instruction]
 Save offer price for a variation:
@@ -235,14 +235,14 @@ Save offer price for a variation:
 . Enter a price.
 . Save (icon:save[set=plenty]) the settings.
 . Open the *Properties* tab.
-. In the *Variation properties*, enter the property name *SalesStartDate*.
+. In the *Variation properties*, enter the property name *sale_from_date*.
 *_Note:_* Can’t find the property? Check that you mapped it to the correct Amazon category.
 . Click on *Add*. +
 → The property is added.
 . Click into the column *Value*. +
 → The calendar opens.
 . Select a start date for the offer price.
-. In the *Variation properties*, enter the property name *SalesEndDate*.
+. In the *Variation properties*, enter the property name *sale_end_date*.
 . Click on *Add*. +
 → The property is added.
 . Click into the column *Value*. +
